force-app/main/default/objects/Account/fields/Is_Updated_From_UI__c.field-meta.xml
<CustomField>
    <fullName>Is_Updated_From_UI__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Updated From UI</label>
    <type>Checkbox</type>
</CustomField>