force-app/main/default/objects/Account/fields/Last_Working_Day__c.field-meta.xml
<CustomField>
    <fullName>Last_Working_Day__c</fullName>
    <label>Last Working Day</label>
    <type>Date</type>
</CustomField>