force-app/main/default/objects/Account/fields/MSA_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>MSA_Document_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>MSA Document Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>