force-app/main/default/objects/Account/fields/MSA_Document_Status__c.field-meta.xml
<CustomField>
    <fullName>MSA_Document_Status__c</fullName>
    <defaultValue>&quot;Pending&quot;</defaultValue>
    <label>MSA Document Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>