force-app/main/default/objects/Account/fields/NDA_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>NDA_Document_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>NDA Document Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>