force-app/main/default/objects/Account/fields/Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Status__c</fullName>
    <label>Onboarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding Requested</fullName>
                <default>true</default>
                <label>Onboarding Requested</label>
            </value>
            <value>
                <fullName>Signature Pending</fullName>
            </value>
            <value>
                <fullName>Approval Requested</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Ready to Onboard</fullName>
            </value>
            <value>
                <fullName>Partner Onboarded</fullName>
            </value>
            <value>
                <fullName>Offboarding Requested</fullName>
            </value>
            <value>
                <fullName>Offboarded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>