force-app/main/default/objects/Account/fields/Project_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Project_Engagement__c</fullName>
    <label>Project/Engagement</label>
    <length>50</length>
    <type>Text</type>
</CustomField>