force-app/main/default/objects/Account/fields/Reason_for_Offboarding__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Offboarding__c</fullName>
    <label>Reason for Offboarding</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>