force-app/main/default/objects/Account/fields/Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Verification_Status__c</fullName>
    <defaultValue>&quot;Pending Verification&quot;</defaultValue>
    <label>Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Verification</fullName>
                <default>true</default>
                <label>Pending Verification</label>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>