force-app/main/default/objects/Account/validationRules/VR_From_UI_For_Onboarding_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_From_UI_For_Onboarding_Status</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Onboarding_Status__c , &apos;Approval Requested&apos;) &amp;&amp; Is_Updated_From_UI__c == true</errorConditionFormula>
    <errorDisplayField>Onboarding_Status__c</errorDisplayField>
    <errorMessage>You cannot updated this field to Approval Requested</errorMessage>
</ValidationRule>